Fix overflow issue on mobile product detail page

--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -10,6 +10,8 @@
 
   @media only screen and (max-width: $break-medium)
     float: none
+    display: grid
+    grid-template-columns: minmax(0, 1fr)
     margin: 16px 0 40px
     max-width: 100%
 
